src/objects/Account_Contact_Role_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Secondary_Position_1__c</fullName>
        <label>Secondary Position 1</label>
        <picklist>
            <picklistValues>
                <fullName>BE31610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE44610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE12220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31295</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31290</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE54630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98460</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE22300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE25100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE25200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98820</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE97300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31410</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE44850</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE41400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE62500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE62400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE97400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Position_2__c</fullName>
        <label>Secondary Position 2</label>
        <picklist>
            <picklistValues>
                <fullName>BE31610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE44610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE12220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31295</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31290</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE54630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98460</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE22300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE25100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE25200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98820</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE97300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31410</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE44850</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE41400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE62500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE62400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE97400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Position_3__c</fullName>
        <label>Secondary Position 3</label>
        <picklist>
            <picklistValues>
                <fullName>BE31610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE44610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE12220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31295</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31290</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE54630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98460</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE22300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE25100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE25200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98820</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE97300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31410</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE31150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE44850</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE41400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE62500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE98520</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE62400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE97400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Site_Popular_Name__c</fullName>
        <description>Populated by workflow for use in searching</description>
        <label>Work Site Popular Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Contact Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>ACR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_edit_of_Account_field_after_create</fullName>
        <active>true</active>
        <description>Account is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Account__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account may not be updated. If you need to update Account please create a new Account Contact Role record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Contact_field_after_create</fullName>
        <active>true</active>
        <description>Contact is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Contact__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Contact may not be updated. If you need to update Contact please create a new Account Contact Role record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_position_for_verified_Contact</fullName>
        <active>true</active>
        <description>Position or department fields may not be edited if the contact is verified.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
NOT($Profile.Name=$Setup.Get2OneCRM__c.Integration_Profile_Name__c), 
LEN(Contact__r.External_Provider_Party_ID__c) &gt; 0 ,
Ignore_ACR_Validation_Rules__c != true,
OR(
ISCHANGED(Primary_Position__c),
ISCHANGED(Secondary_Position_1__c), ISCHANGED(Secondary_Position_2__c),
ISCHANGED(Secondary_Position_3__c),
ISCHANGED(Department__c))
) 
&amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c != true</errorConditionFormula>
        <errorMessage>Position fields may not be edited if the contact is verified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Site_must_Connect_to_Contact_Person</fullName>
        <active>true</active>
        <description>If you are connecting a Work Site it can only be connected to the Contact RT &apos;Contact Person&apos;</description>
        <errorConditionFormula>Account__r.RecordType.DeveloperName = &apos;Work_Site&apos; &amp;&amp; 
Contact__r.RecordType.DeveloperName &lt;&gt; &apos;Contact_Person&apos; &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>A Work Site must be connected to a Contact Person</errorMessage>
    </validationRules>
</CustomObject>